--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
     </div>
   </section>
   <footer>
-    <p>© 2025 [Nama Anda] | Dibuat dengan ??</p>
+    <p>Â© 2025 [Nama Anda] | Dibuat dengan ??</p>
   </footer>
 </body>
 </html>
+<img src="gambar-desain.jpg" alt="Contoh Desain" width="300">
